--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FitSmart - Edukasi Kesehatan</title>
     <link rel="stylesheet" href="../Style/style.css">
 </head>
 <body>
@@ -36,6 +36,12 @@
             <img src="../Images/hero-right.svg" alt="Dokter">
         </div>
     </section>
+
+    <div class="icon-centang">
+        <i class="fas fa-badge-check centang"></i>
+        <i class="fas fa-badge-check centang"></i>
+        <i class="fas fa-badge-check centang"></i>
+    </div>
 
     <section class="brand-logos">
         <div class="logo-container">
@@ -73,6 +79,24 @@
                 <button class="primary-btn">Pelajari Lebih →</button>
             </div>
         </div>
+    </section>
+
+    <section>
+        <div class="penyakit">
+            <img class="bakcgound-penyakit" src="../Images/background-penyakit.svg" alt="">
+            <div class="penyakit1">
+                <div class="card1 card_highlight1"></div>
+                <div class="card1"></div>
+            </div>
+            <div class="penyakit2">
+                <div class="card2"></div>
+                <div class="card2 card_highlight2"></div>
+            </div>
+            <div class="penyakit1">
+                <div class="card1 card_highlight1"></div>
+                <div class="card1"></div>
+            </div>
+        </div>    
     </section>
 </body>
 </html>
