--- a/Pages/index.html
+++ b/Pages/index.html
@@ -98,5 +98,11 @@
             </div>
         </div>    
     </section>
+
+    <section class="olahraga">
+        <div class="olahraga-text">
+            <h1><span style="color: #30B0C7;">→</span>  Aktifitas Kesehatan</h1>
+        </div>
+    </section>
 </body>
 </html>
