--- a/Pages/index.html
+++ b/Pages/index.html
@@ -38,8 +38,8 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Jalan Cerdas Anda <br> Menuju <span>Kesehatan</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, aspernatur voluptatum. Deserunt aut voluptas fugit numquam accusantium soluta maiores. Veritatis!</p>
+            <h1 class="judul-text1">Jalan Cerdas Anda <br> Menuju <span>Kesehatan</span></h1>
+            <p class="deskripsi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, aspernatur voluptatum. Deserunt aut voluptas fugit numquam accusantium soluta maiores. Veritatis!</p>
             
             <div class="buttons">
                 <button class="primary-btn">Pelajari Lebih →</button>
