--- a/Pages/index.html
+++ b/Pages/index.html
@@ -39,7 +39,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="judul-text1">Jalan Cerdas Anda Menuju <span>Kesehatan</span></h1>
-            <p class="deskripsi">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, aspernatur voluptatum. Deserunt aut voluptas fugit numquam accusantium soluta maiores. Veritatis!</p>
+            <p class="deskripsi">Temukan solusi kesehatan terbaik dengan dukungan dokter profesional dan layanan medis berkualitas. Dapatkan informasi medis terpercaya, akses ke dokter spesialis terbaik, serta kemudahan dalam melakukan reservasi.</p>
             
             <div class="buttons">
                 <button class="primary-btn">Pelajari Lebih →</button>
