--- a/Pages/index.html
+++ b/Pages/index.html
@@ -52,12 +52,6 @@
         </div>
     </section>
 
-    <div class="icon-centang">
-        <i class="fas fa-badge-check centang"></i>
-        <i class="fas fa-badge-check centang"></i>
-        <i class="fas fa-badge-check centang"></i>
-    </div>
-
     <section class="brand-logos">
         <div class="logo-container">
             <img src="//cdn.pacdora.com/ui/topic/2ebfce85-ce24-4529-97ba-f514d55d8ff4.svg" alt="Figma">
@@ -83,14 +77,16 @@
             <img src="../Images/makanan.svg" alt="hero">
         </div>
         <div class="text-container">
-            <h2>MAKANAN KESEHATAN</h2>
-            <h1>Buah-Buahan & <br>Sayur-Sayuran</h1>
-            <p>
-                ✅ Membantu mencegah penyakit jantung, obesitas, dan stroke.<br>
-                ✅ Mencegah dan mengurangi stres berlebih. <br>
-                ✅ Membersihkan racun dalam tubuh (Detoksifikasi)
-            </p>
-            <div class="button-group">
+            <div class="makanan-title1">
+                <h2>MAKANAN KESEHATAN</h2>
+                <h1>Buah-Buahan & <br>Sayur-Sayuran</h1>
+            </div>
+            <div class="makanan-title2">
+                <p>
+                    ✅ Membantu mencegah penyakit jantung, obesitas, dan stroke.<br>
+                    ✅ Mencegah dan mengurangi stres berlebih. <br>
+                    ✅ Membersihkan racun dalam tubuh (Detoksifikasi)
+                </p>
                 <button class="primary-btn-makanan">Pelajari Lebih →</button>
             </div>
         </div>
@@ -104,7 +100,7 @@
                 <div class="card1">
                     <h1>Diabetes Mellitus: <br> Penyakit Metabolik</h1>
                     <p style="margin-bottom: 15px;">Diabetes Mellitus adalah gangguan metabolik kronis yang ditandai dengan kadar gula darah yang tinggi akibat gangguan produksi atau penggunaan insulin dalam tubuh.</p>
-                    <p class="second-p-penyakit">Diabetes terbagi menjadi beberapa jenis, termasuk diabetes tipe 1, tipe 2, dan diabetes gestasional. Faktor risiko utama meliputi pola makan tidak sehat, atau faktor genetik</p>
+                    <p class="second-p-penyakit">Diabetes terbagi menjadi beberapa jenis, termasuk diabetes tipe 1, tipe 2, dan diabetes gestasional. Faktor risiko utama meliputi pola makan tidak sehat.</p>
                     <button class="primary-btn-penyakit">Pelajari Lebih →</button>
                     <button class="secondary-btn-penyakit">Penyakit Lainnya </button>
                 </div>
@@ -139,40 +135,40 @@
                 <h1><span style="color: #30B0C7;">→</span>  Aktifitas Kesehatan</h1>
             </div>
             <div class="text-olahraga-kiri">
-                <p>Lorem ipsum dolor sit amet consectetur. Sit eget quis in phasellus</p>
+                <p>Beberapa aktifitas atau olahraga yang dapat membantu menjaga kebugaran tubuh anda</p>
             </div>
         </div>
         <div class="blog-container">
             <div class="blog-card">
-                <img src="../Images/olahraga1.jpg" alt="Blog Image">
+                <div class="olahraga-img1"></div>
                 <div class="tags">
                     <div class="tag">Turunkan Berat Badan</div>
                     <div class="tag">Latihan</div>
                 </div>
                 <h3>Berenang</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia omnis architecto eligendi laborum porro.</p>
+                <p>Berenang adalah gerakan sewaktu bergerak di air. Berenang biasanya dilakukan tanpa perlengkapan buatan.</p>
                 <button class="primary-btn-aktifitas">Pelajari Lebih →</button>
             </div>
     
             <div class="blog-card">
-                <img src="../Images/olahraga2.jpg" alt="Blog Image">
+                <div class="olahraga-img2"></div>
                 <div class="tags">
                     <div class="tag">Turunkan Berat Badan</div>
                     <div class="tag">Latihan</div>
                 </div>
                 <h3>Jogging / Running</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia omnis architecto eligendi laborum porro.</p>
+                <p>joging adalah suatu bentuk berlari dengan kecepatan lambat atau santai. Lari laun bertujuan untuk meningkatkan kebugaran jasmani.</p>
                 <button class="primary-btn-aktifitas">Pelajari Lebih →</button>
             </div>
     
             <div class="blog-card">
-                <img src="../Images/olahraga3.jpg" alt="Blog Image">
+                <div class="olahraga-img3"></div>
                 <div class="tags">
                     <div class="tag">Turunkan Berat Badan</div>
                     <div class="tag">Latihan</div>
                 </div>
                 <h3>Bersepeda</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia omnis architecto eligendi laborum porro.</p>
+                <p>Bersepeda adalah sebuah kegiatan rekreasi atau olahraga, serta merupakan salah satu moda transportasi darat yang menggunakan sepeda.</p>
                 <button class="primary-btn-aktifitas">Pelajari Lebih →</button>
             </div>
         </div>
