page login & register

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -21,8 +21,12 @@
             <i class="fa-solid fa-bars" style="font-size: 23px;"></i>
         </div>
         <div class="auth-buttonbuttons">
-            <button type="button" class="btn-masuk">Masuk</button>
-            <button type="button" class="btn-daftar">Daftar</button>
+            <a href="login.html">
+                <button type="button" class="btn-masuk">Masuk</button>
+            </a>
+            <a href="register.html">
+                <button type="button" class="btn-daftar">Daftar</button>
+            </a>
         </div>
         <ul class="dropdown-menu">
             <li><a href="#">Beranda</a></li>
