--- a/Pages/login.html
+++ b/Pages/login.html
@@ -10,7 +10,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="form-container">
-                <h1 class="title">Daftar</h1>
+                <h1 class="title">Masuk</h1>
                 <form class="login-form">
                     <input type="email" placeholder="Email" class="input">
                     <input type="password" placeholder="Password" class="input">
