--- a/Pages/register.html
+++ b/Pages/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar | FitSmart</title>
-    <link rel="stylesheet" href="../Style/login.css">
+    <link rel="stylesheet" href="../Style/register.css">
 </head>
 <body>
     <div class="login-container">
