--- a/Pages/aktifitas.html
+++ b/Pages/aktifitas.html
@@ -12,9 +12,9 @@
         <div class="logo">LOGO</div>
         <ul class="nav-links">
             <li><a href="index.html">Beranda</a></li>
-            <li><a href="#">Konsumsi</a></li>
+            <li><a href="konsumsi.html">Konsumsi</a></li>
             <li><a href="aktifitas.html">Aktifitas</a></li>
-            <li><a href="#">Penyakit</a></li>
+            <li><a href="penyakit.html">Penyakit</a></li>
         </ul>
         <div class="toggle-btn">
             <i class="fa-solid fa-bars" style="font-size: 23px;"></i>
