--- a/Pages/aktifitas.html
+++ b/Pages/aktifitas.html
@@ -94,7 +94,7 @@
                 </div>
                 <button class="primary-btn-aktifitas" onclick="openPopup()">Pelajari Lebih →</button>
             </div>
-            <div id="popup" class="popup">
+            <div id="popup" class="popup" style="display: none;">
                 <div class="popup-content">
                     <span class="close-btn" onclick="closePopup()">&times;</span>
                     <div class="popup_highlight1"></div>
