--- a/Pages/penyakit.html
+++ b/Pages/penyakit.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
 
-                <div id="popup" class="popup">
+                <div id="popup" class="popup" style="display: none;">
                     <div class="popup-content">
                         <span class="close-btn" onclick="closePopup()">&times;</span>
                         <div class="popup_highlight1"></div>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
 
-                <div id="popup2" class="popup2">
+                <div id="popup2" class="popup2" style="display: none;">
                     <div class="popup-content">
                         <span class="close-btn" onclick="closePopup2()">&times;</span>
                         <div class="popup_highlight2"></div>
@@ -219,7 +219,7 @@
                     </div>
                 </div>
 
-                <div id="popup3" class="popup">
+                <div id="popup3" class="popup" style="display: none;">
                     <div class="popup-content">
                         <span class="close-btn" onclick="closePopup3()">&times;</span>
                         <div class="popup_highlight1"></div>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
 
-                <div id="popup4" class="popup2">
+                <div id="popup4" class="popup2" style="display: none;">
                     <div class="popup-content">
                         <span class="close-btn" onclick="closePopup4()">&times;</span>
                         <div class="popup_highlight2"></div>
