--- a/Pages/konsumsi.html
+++ b/Pages/konsumsi.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitSmart - Edukasi Kesehatan</title>
-    <link rel="stylesheet" href="../Style/style.css">
     <link rel="stylesheet" href="../Style/konsumsi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
+    <link rel="icon" href="../Images/logo-putih.svg">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">LOGO</div>
+        <div class="logo"></div>
         <ul class="nav-links">
             <li><a href="index.html">Beranda</a></li>
             <li><a href="konsumsi.html">Konsumsi</a></li>
@@ -21,7 +20,7 @@
         <div class="toggle-btn">
             <i class="fa-solid fa-bars" style="font-size: 23px;"></i>
         </div>
-        <div class="auth-buttonbuttons">
+        <div class="auth-buttons">
             <a href="login.html">
                 <button type="button" class="btn-masuk">Masuk</button>
             </a>
@@ -59,27 +58,25 @@
         </script>
     </nav>
 
-
-
-
     <section class="hero">
-        <div class="container-hero">
-            <div class="text">
-                <h2>MENJAGA KESEHATAN UNTUK HIDUP LEBIH BAIK</h2>
-                <h1>Makanan & Minuman Sehat</h1>
-                <p>Silakan berikan deskripsi baru yang ingin Anda gunakan, atau jika ingin saya membantu merangkai kalimat yang lebih menarik, beri tahu saya konsep atau kata kunci yang ingin dimasukkan! 😊</p>
-                <div class="button-text-container">
-                    <button class="button-text">Pelajari Lebih <img src="../images/arrow-right.png" ></button>
-                </div>
+        <div class="hero-content">
+            <h2 class="tag-text">MENJAGA KESEHATAN UNTUK HIDUP LEBIH BAIK</h2>
+            <p style="position: absolute; font-size: 55px; margin-top: -5rem; margin-left: 50rem;" class="emote">🍎</p>
+            <p style="position: absolute; font-size: 55px; margin-top: 12rem;" class="emote">🫐</p>
+            <h1 class="judul-text1">Makanan & Minuman Sehat</h1>
+                <p>Silakan berikan deskripsi baru yang ingin Anda gunakan, atau jika ingin saya membantu merangkai kalimat yang lebih menarik, beri tahu saya konsep atau kata kunci yang ingin dimasukkan! 😊</p>            
+            <div class="buttons">
+                <a href="#sayur">
+                <button class="primary-btn">Pelajari Lebih →</button>
+                </a>
             </div>
-            <div class="buah-asset">
-                <img src="../images/apel.png" class="apel">
-                <img src="../images/asset2.png" class="anggur">
-            </div>
+        </div>
+
+        <div class="hero-image">
         </div>
     </section>
 
-    <section class="sayur">
+    <section class="sayur" id="sayur">
         <div class="judul-sayuran">
             <img src="../images/f51b47dd-4dbf-4740-844a-a4a519fccdf3.svg.png">
             <h1>Sayur - Sayuran <img src="../images/🥦.png" style="width: 28px;"></h1>
@@ -374,7 +371,7 @@
     <footer>
         <div class="container-footer">
             <div class="footer-top">
-                <div class="logo-footer">LOGO</div>
+                <div class="logo-footer"></div>
                 <p class="desk-footer">Menjaga Kesehatan Indonesia</p>
 
                 <div class="button-container">
