--- a/Pages/penyakit.html
+++ b/Pages/penyakit.html
@@ -6,7 +6,7 @@
     <title>FitSmart - Edukasi Kesehatan</title>
     <link rel="stylesheet" href="../Style/penyakit.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
+    <link rel="icon" href="../Images/logo-putih.svg">
 </head>
 <body>
     <nav class="navbar">
@@ -20,7 +20,7 @@
         <div class="toggle-btn">
             <i class="fa-solid fa-bars" style="font-size: 23px;"></i>
         </div>
-        <div class="auth-buttonbuttons">
+        <div class="auth-buttons">
             <a href="login.html">
                 <button type="button" class="btn-masuk">Masuk</button>
             </a>
@@ -58,27 +58,23 @@
         </script>
     </nav>
 
-
-
-
     <section class="hero">
         <div class="hero-content">
             <h2 class="tag-text">MENJAGA KESEHATAN UNTUK HIDUP LEBIH BAIK</h2>
+            <p style="position: absolute; font-size: 55px; margin-top: -5rem; margin-left: 50rem;" class="emote">🤒</p>
+            <p style="position: absolute; font-size: 55px; margin-top: 12rem;" class="emote">🤕</p>
             <h1 class="judul-text1">Waspada Penyakit</h1>
-            <p class="deskripsi">Temukan solusi kesehatan terbaik dengan dukungan dokter profesional dan layanan medis berkualitas. Dapatkan informasi medis terpercaya, akses ke dokter spesialis terbaik, serta kemudahan dalam melakukan reservasi.</p>
-            
+                <p>Silakan berikan deskripsi baru yang ingin Anda gunakan, atau jika ingin saya membantu merangkai kalimat yang lebih menarik, beri tahu saya konsep atau kata kunci yang ingin dimasukkan! 😊</p>            
             <div class="buttons">
+                <a href="#sayur">
                 <button class="primary-btn">Pelajari Lebih →</button>
+                </a>
             </div>
         </div>
 
         <div class="hero-image">
         </div>
     </section>
-
-   
-    
-  
 
     <section>
         <div class="penyakit">
@@ -336,9 +332,47 @@
         </div>    
     </section>
 
-    <!-- faq pls -->
-     <!-- disiniii -->
-    <!-- faq pls -->
+    <section class="qna">
+        <div class="container-5">
+            <div class="title">Frequently Asked Questions</div>
+            <div class="tab">
+                <input type="radio" name="acc" id="acc-1">
+                <label for="acc-1">
+                    <h3>Apa Saja Makanan yang Baik untuk Kesehatan Tubuh?</h3>
+                </label>
+                <div class="content-pertanyaan">
+                    <p>Makanan sehat meliputi sayuran hijau, buah-buahan, protein tanpa lemak (seperti ikan dan ayam), kacang-kacangan, serta makanan yang kaya serat seperti oatmeal dan gandum utuh.</p>
+                </div>
+            </div>
+            <div class="tab">
+                <input type="radio" name="acc" id="acc-2">
+                <label for="acc-2">
+                    <h3>Berapa Banyak Air yang Harus Kita Minum Setiap Hari?</h3>
+                </label>
+                <div class="content-pertanyaan">
+                    <p>Secara umum, orang dewasa dianjurkan minum sekitar 2-3 liter air per hari atau 8-10 gelas, tergantung pada aktivitas dan kondisi tubuh.</p>
+                </div>
+            </div>
+            <div class="tab">
+                <input type="radio" name="acc" id="acc-3">
+                <label for="acc-3">
+                    <h3>Apa Manfaat Mengonsumsi Sayur dan Buah Secara Rutin?</h3>
+                </label>
+                <div class="content-pertanyaan">
+                    <p>Sayur dan buah mengandung serat, vitamin, dan antioksidan yang membantu meningkatkan sistem imun, melancarkan pencernaan, serta mengurangi risiko penyakit kronis seperti diabetes dan penyakit jantung.</p>
+                </div>
+            </div>
+            <div class="tab">
+                <input type="radio" name="acc" id="acc-4">
+                <label for="acc-4">
+                    <h3>Bagaimana Cara Menjaga Pola Makan Seimbang?</h3>
+                </label>
+                <div class="content-pertanyaan">
+                    <p>Pola makan seimbang mencakup karbohidrat (50%), protein (20-25%), lemak sehat (15-20%), serta konsumsi cukup serat, vitamin, dan mineral dari sayur dan buah.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="container-footer">
