--- a/Pages/aktifitas.html
+++ b/Pages/aktifitas.html
@@ -224,7 +224,7 @@
     <footer>
         <div class="container-footer">
             <div class="footer-top">
-                <div class="logo-footer">LOGO</div>
+                <div class="logo-footer"></div>
                 <p class="desk-footer">Menjaga Kesehatan Indonesia</p>
 
                 <div class="button-container">
