--- a/Pages/index.html
+++ b/Pages/index.html
@@ -158,6 +158,7 @@
                     <h1>Diabetes Mellitus: <br> Penyakit Metabolik</h1>
                     <p style="margin-bottom: 15px;">Diabetes Mellitus adalah gangguan metabolik kronis yang ditandai dengan kadar gula darah yang tinggi akibat gangguan produksi atau penggunaan insulin dalam tubuh.</p>
                     <p class="second-p-penyakit">Diabetes terbagi menjadi beberapa jenis, termasuk diabetes tipe 1, tipe 2, dan diabetes gestasional. Faktor risiko utama meliputi pola makan tidak sehat.</p>
+                    <button class="primary-btn-penyakit" onclick="openPopup()">Pelajari Lebih →</button>
                     <a href="penyakit.html">
                     <button class="secondary-btn-penyakit">Penyakit Lainnya </button>
                     </a>
