--- a/Pages/aktifitas.html
+++ b/Pages/aktifitas.html
@@ -129,9 +129,26 @@
                     2. Asma <br>
                     3. Obesitas</p>
                 </div>
-                <button class="primary-btn-aktifitas" onclick="openPopup()">Pelajari Lebih →</button>
+                <button class="primary-btn-aktifitas" onclick="openPopup2()">Pelajari Lebih →</button>
             </div>
-            
+            <div id="popup2" class="popup2" style="display: none;">
+                <div class="popup-content">
+                    <span class="close-btn" onclick="closePopup2()">&times;</span>
+                    <div class="popup_highlight2"></div>
+                    <h2>Sepak Bola</h2>
+                    <p>Sepak bola adalah olahraga tim yang dimainkan oleh dua regu, masing-masing terdiri dari sebelas pemain. Tujuan utama permainan ini adalah mencetak gol dengan memasukkan bola ke gawang lawan menggunakan kaki atau bagian tubuh lain kecuali tangan. Sepak bola dikenal sebagai olahraga paling populer di dunia karena dimainkan oleh berbagai kalangan dan memiliki basis penggemar yang sangat besar. <br> <br>
+
+                        Permainan berlangsung selama 90 menit yang dibagi menjadi dua babak, masing-masing 45 menit, dengan istirahat 15 menit di antaranya. Pemain hanya diperbolehkan menggunakan kaki, kepala, atau dada untuk mengontrol bola, kecuali kiper yang boleh menggunakan tangan di area kotak penalti. <br> <br>
+                        Manfaat Bermain Sepak Bola <br> <br>
+                        Meningkatkan Kesehatan Jantung – Aktivitas fisik yang intens, seperti berlari dan menggiring bola, membantu meningkatkan daya tahan jantung dan paru-paru. <br> <br>
+                        Melatih Kecepatan dan Kelincahan – Permainan yang dinamis memerlukan pergerakan cepat, refleks yang baik, serta koordinasi tubuh yang tinggi. <br> <br>
+                        Mengembangkan Kerja Sama Tim – Sepak bola adalah olahraga tim yang membutuhkan komunikasi dan strategi antar pemain untuk meraih kemenangan. <br> <br>
+                        Meningkatkan Kekuatan Otot dan Ketahanan Fisik – Berlari, menendang, dan bertahan dalam pertandingan membantu memperkuat otot kaki serta meningkatkan daya tahan tubuh. <br> <br>
+
+                        Sepak bola juga memiliki nilai sosial yang tinggi karena bisa dimainkan di berbagai tempat, mulai dari lapangan profesional hingga jalanan, serta dapat mempererat hubungan antar pemain. Dengan banyaknya kompetisi di berbagai tingkatan, sepak bola menjadi salah satu olahraga yang terus berkembang dan digemari oleh masyarakat di seluruh dunia.
+                        </p>
+                </div>
+            </div>
             <div class="gambar-aktifitas2"></div>
         </div>
         <div class="blog-aktifitas1">
@@ -150,7 +167,27 @@
                     2. Sindrom Metabolik  <br>
                     3. Insomnia</p>
                 </div>
-                <button class="primary-btn-aktifitas" onclick="openPopup()">Pelajari Lebih →</button>
+                <button class="primary-btn-aktifitas" onclick="openPopup3()">Pelajari Lebih →</button>
+            </div>
+            <div id="popup3" class="popup3" style="display: none;">
+                <div class="popup-content">
+                    <span class="close-btn" onclick="closePopup3()">&times;</span>
+                    <div class="popup_highlight3"></div>
+                    <h2>Bulu Tangkis</h2>
+                    <p>Bulu tangkis adalah olahraga raket yang dimainkan oleh dua pemain (tunggal) atau dua pasangan (ganda) dengan tujuan utama memukul shuttlecock melewati net ke area lawan. Permainan ini menuntut kecepatan, ketangkasan, serta strategi yang baik untuk mengalahkan lawan dengan mengarahkan shuttlecock ke tempat yang sulit dijangkau. <br> <br>
+
+                        Permainan bulu tangkis dimainkan di lapangan berbentuk persegi panjang dengan net di tengahnya. Setiap reli dimulai dengan servis, dan pemain harus berusaha mencetak poin dengan memukul shuttlecock agar jatuh di area lawan atau membuat lawan melakukan kesalahan. Setiap pertandingan biasanya dimainkan dalam format best of three (dua dari tiga set), di mana setiap set berlangsung hingga 21 poin. <br> <br>
+                        Manfaat Bermain Bulu Tangkis <br> <br>
+                        Meningkatkan Ketangkasan dan Refleks – Permainan ini membutuhkan reaksi cepat dan pergerakan lincah untuk mengembalikan pukulan lawan. <br> <br>
+                        Melatih Daya Tahan dan Kesehatan Jantung – Aktivitas berlari, melompat, dan melakukan pukulan intens membantu meningkatkan daya tahan tubuh serta kesehatan kardiovaskular. <br> <br>
+                        Membantu Menurunkan Berat Badan – Bermain bulu tangkis secara rutin dapat membakar kalori dan membantu menjaga berat badan ideal. <br> <br>
+                        Mengembangkan Koordinasi dan Keseimbangan – Mengontrol raket dan melakukan pukulan akurat melatih koordinasi tangan dan mata serta keseimbangan tubuh. <br> <br>
+                        Meningkatkan Konsentrasi dan Strategi Berpikir – Setiap pukulan membutuhkan perhitungan yang matang untuk mengalahkan lawan dengan teknik yang tepat. <br> <br>
+
+
+                        Bulu tangkis merupakan olahraga yang bisa dimainkan oleh berbagai kalangan, baik secara rekreasi maupun kompetitif. Dengan banyaknya turnamen tingkat nasional hingga internasional, seperti All England dan Olimpiade, bulu tangkis terus berkembang menjadi salah satu olahraga yang paling digemari di dunia, terutama di negara-negara Asia seperti Indonesia.
+                        </p>
+                </div>
             </div>
         </div>
         <div class="blog-aktifitas2">
@@ -168,9 +205,34 @@
                     2. Diabetes Tipe 2 <br>
                     3. Obesitas</p>
                 </div>
-                <button class="primary-btn-aktifitas" onclick="openPopup()">Pelajari Lebih →</button>
+                <button class="primary-btn-aktifitas" onclick="openPopup4()">Pelajari Lebih →</button>
             </div>
             <div class="gambar-aktifitas4"></div>
+            <div id="popup4" class="popup4" style="display: none;">
+                <div class="popup-content4">
+                    <span class="close-btn" onclick="closePopup4()">&times;</span>
+                    <div class="popup_highlight4"></div>
+                    <h2>Workout</h2>
+                    <p>Workout adalah serangkaian latihan fisik yang dilakukan untuk meningkatkan kebugaran tubuh, memperkuat otot, serta menjaga kesehatan secara keseluruhan. Workout dapat dilakukan di gym, di rumah, atau di tempat terbuka dengan berbagai metode latihan, seperti latihan beban, kardio, dan fleksibilitas. <br> <br>
+
+                        Jenis-jenis workout <br> <br>
+                        Latihan Kardiovaskular (Cardio) – Contohnya lari, bersepeda, lompat tali, dan aerobik. Latihan ini bermanfaat untuk meningkatkan daya tahan jantung dan paru-paru. <br><br>
+                        Latihan Kekuatan (Strength Training) – Melibatkan angkat beban atau latihan menggunakan berat tubuh seperti push-up dan squats untuk memperkuat otot. <br><br>
+                        Latihan Fleksibilitas (Flexibility Training) – Seperti yoga dan stretching yang membantu meningkatkan kelenturan serta mengurangi risiko cedera. <br><br>
+                        Latihan Fungsional (Functional Training) – Bertujuan untuk meningkatkan koordinasi dan keseimbangan tubuh, seperti plank dan burpees. <br><br>
+
+                        Manfaat workout <br> <br>
+                        Meningkatkan Kesehatan Jantung – Latihan rutin dapat memperkuat jantung dan melancarkan peredaran darah. <br><br>
+                        Membantu Menurunkan Berat Badan – Membakar kalori dan meningkatkan metabolisme untuk menjaga berat badan ideal. <br><br>
+                        Meningkatkan Kekuatan dan Daya Tahan Tubuh – Melatih otot dan tulang agar lebih kuat serta meningkatkan ketahanan fisik. <br><br>
+                        Mengurangi Stres dan Meningkatkan Mood – Workout dapat merangsang produksi hormon endorfin yang membuat tubuh lebih rileks dan bahagia. <br><br>
+                        Meningkatkan Kualitas Tidur – Aktivitas fisik yang cukup membantu tubuh lebih mudah beristirahat dengan tidur yang nyenyak. <br><br>
+
+
+                        Workout adalah olahraga yang fleksibel dan dapat disesuaikan dengan kebutuhan serta kemampuan individu. Dengan melakukan workout secara rutin, tubuh akan menjadi lebih sehat, bugar, dan berenergi dalam menjalani aktivitas sehari-hari.
+                        </p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -184,7 +246,7 @@
                     <h3>Sebutkan Beberapa Aktifitas Olahraga</h3>
                 </label>
                 <div class="content-pertanyaan">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio recusandae eum ducimus error esse molestiae eos nobis veritatis maxime sequi!</p>
+                    <p>Lari (jogging/maraton), Bersepeda, Renang, Yoga, Workout/Fitness, Senam (aerobik/zumba), Panahan, Mendaki gunung, Sepak bola, Basket, Voli, Bulu tangkis, Parkout, Futsal, Tenis meja, Selancar (surfing), Panjat tebing, Ski dan Snowboarding dan lainnya</p>
                 </div>
             </div>
             <div class="tab">
@@ -193,7 +255,7 @@
                     <h3>Apa Manfaat Kita Berolahraga?</h3>
                 </label>
                 <div class="content-pertanyaan">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis a, sunt similique tempora cupiditate dignissimos blanditiis officia odio quas provident?</p>
+                    <p>Berolahraga memiliki banyak manfaat bagi kesehatan fisik, mental, dan sosial. Secara fisik, olahraga membantu meningkatkan kesehatan jantung, memperkuat otot dan tulang, serta menjaga berat badan ideal. Aktivitas fisik yang teratur juga dapat meningkatkan daya tahan tubuh dan fleksibilitas, sehingga tubuh lebih bugar dan terhindar dari berbagai penyakit.</p>
                 </div>
             </div>
             <div class="tab">
@@ -202,7 +264,7 @@
                     <h3>Apa Dampak Ketika Kita Tidak Pernah Beraktifitas?</h3>
                 </label>
                 <div class="content-pertanyaan">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque ea libero officiis ducimus quis nam iusto quisquam aliquam repudiandae! Mollitia!</p>
+                    <p>Tidak beraktivitas fisik secara teratur dapat memberikan dampak negatif bagi kesehatan fisik, mental, dan sosial. Dari segi fisik, kurangnya aktivitas dapat menyebabkan penurunan kebugaran tubuh, melemahnya otot dan tulang, serta meningkatkan risiko obesitas. Selain itu, gaya hidup yang kurang aktif dapat meningkatkan kemungkinan terkena berbagai penyakit kronis seperti penyakit jantung, diabetes, dan tekanan darah tinggi.</p>
                 </div>
             </div>
             <div class="tab">
@@ -211,7 +273,7 @@
                     <h3>Apa Olarhaga Yang Dapat Dilakukan di Rumah?</h3>
                 </label>
                 <div class="content-pertanyaan">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea debitis laborum officia distinctio numquam veniam suscipit iure quibusdam quia!</p>
+                    <p>Senam Aerobik, Lompat Tali, Yoga, Push-Up, Squat, Plank, Burpee, Wall Sit, Stretching, Kardio dengan Musik</p>
                 </div>
             </div>
         </div>
@@ -228,8 +290,12 @@
                 <p class="desk-footer">Menjaga Kesehatan Indonesia</p>
 
                 <div class="button-container">
+                    <a href="login.html">
                     <button type="button" class="button">Masuk</button>
+                    </a>
+                    <a href="register.html">
                     <button type="button" class="button">Daftar</button>
+                    </a>
                 </div>
             </div>
 
@@ -246,16 +312,6 @@
             </div>
         </div>
     </footer>
-<script>
-    // Function to open popup
-    function openPopup() {
-        document.getElementById("popup").style.display = "flex";
-    }
-
-    // Function to close popup
-    function closePopup() {
-        document.getElementById("popup").style.display = "none";
-    }
-</script>
+<script src="../script.js"></script>
 </body>
 </html>
