--- a/Pages/penyakit.html
+++ b/Pages/penyakit.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">LOGO</div>
+        <div class="logo"></div>
         <ul class="nav-links">
             <li><a href="index.html">Beranda</a></li>
             <li><a href="konsumsi.html">Konsumsi</a></li>
