--- a/Pages/konsumsi.html
+++ b/Pages/konsumsi.html
@@ -1219,6 +1219,10 @@
         </div>
     </section>
 
+    <img class="background-olahraga" src="../Images/background-olahraga.svg" alt="">
+
+    <h1 class="last-title">Mulai <span style="color: #30B0C7; font-family: 'Poppins-Medium';">Hidup Sehat</span> Dari Sekarang Demi Masa Depan</h1>
+
     <footer>
         <div class="container-footer">
             <div class="footer-top">
