--- a/Pages/aktifitas.html
+++ b/Pages/aktifitas.html
@@ -281,7 +281,7 @@
 
     <img class="background-olahraga" src="../Images/background-olahraga.svg" alt="">
 
-    <h1 class="last-title">Mulai Hidup Sehat Dari Sekarang Demi Masa Depan</h1>
+    <h1 class="last-title">Mulai <span style="color: #30B0C7; font-family: 'Poppins-Medium';">Hidup Sehat</span> Dari Sekarang Demi Masa Depan</h1>
 
     <footer>
         <div class="container-footer">
