--- a/Pages/login.html
+++ b/Pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masuk | FitSmart</title>
     <link rel="stylesheet" href="../Style/login.css">
+    <link rel="icon" href="../Images/logo-putih.svg">
 </head>
 <body>
     <div class="login-container">
