--- a/Pages/index.html
+++ b/Pages/index.html
@@ -30,10 +30,10 @@
             </a>
         </div>
         <ul class="dropdown-menu">
-            <li><a href="#">Beranda</a></li>
-            <li><a href="#">Konsumsi</a></li>
-            <li><a href="#">Aktifitas</a></li>
-            <li><a href="#">Penyakit</a></li>
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="konsumsi.html">Konsumsi</a></li>
+            <li><a href="aktifitas.html">Aktifitas</a></li>
+            <li><a href="penyakit.html">Penyakit</a></li>
             <li class="button2"><a href="#">
                 <button type="button" class="btn-masuk">Masuk</button>
                 <button type="button" class="btn-daftar">Daftar</button>
